Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -696,11 +696,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "e2b73e05-dfbf-43e1-be4e-df3efcca4447"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:44:08.385642+00:00",
-          "start_time": "2023-07-19T02:44:08.219824+00:00"
+          "end_time": "2023-07-19T02:46:36.634321+00:00",
+          "start_time": "2023-07-19T02:46:36.467093+00:00"
         }
       },
       "execution_count": null,
@@ -717,11 +717,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "174a041f-d294-4c1d-b6c6-956da1fc5d0d"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:13.162060+00:00",
-          "start_time": "2023-07-19T02:37:12.965202+00:00"
+          "end_time": "2023-07-19T02:46:42.419338+00:00",
+          "start_time": "2023-07-19T02:46:42.227833+00:00"
         },
         "datalink": {
           "d42ff857-38ea-4219-a869-354699010ccb": {
@@ -1295,6 +1295,50 @@
             "sampling_time": "2023-07-19T02:37:13.006512",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_8c40204579c5445086cc333bebbd6742"
+          },
+          "97eb0f5e-c9d9-4e7d-a086-bc82e270e5c5": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "97eb0f5e-c9d9-4e7d-a086-bc82e270e5c5",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:46:42.262005",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_79c1a4f2ac8c4b6c812c3d3203e6a3aa"
           }
         },
         "dx": {
@@ -1319,11 +1363,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "92445e2d-9696-49c2-a450-75be60b1654d"
+          "output_collection_id": "5d3e703f-c7a8-49b3-883e-0ee56805973b"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:42:14.457077+00:00",
-          "start_time": "2023-07-19T02:42:14.296277+00:00"
+          "end_time": "2023-07-19T02:46:52.402932+00:00",
+          "start_time": "2023-07-19T02:46:52.240495+00:00"
         }
       },
       "execution_count": null,
@@ -1336,11 +1380,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "a8de3e7a-8371-4d7f-9c18-13c25d16b7de"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:13.677273+00:00",
-          "start_time": "2023-07-19T02:37:13.415688+00:00"
+          "end_time": "2023-07-19T02:46:57.157249+00:00",
+          "start_time": "2023-07-19T02:46:56.900567+00:00"
         },
         "datalink": {
           "ee42736d-9639-42ca-8138-80ed5129674c": {
@@ -1848,7 +1892,59 @@
             "sampling_time": "2023-07-19T02:37:13.518390",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_309d16fb6e2241909c4e01cb496e733f"
+          },
+          "e052f0e2-d6f1-4a63-8768-f7967e8087e8": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 13,
+              "orig_size_bytes": 1560,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 13,
+              "truncated_size_bytes": 1560,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "e052f0e2-d6f1-4a63-8768-f7967e8087e8",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:46:56.997086",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_38dfc4eac1a64b729dad0ed5abccdd06"
           }
+        },
+        "dx": {
+          "fieldMetadata": {},
+          "simpleTable": true,
+          "updated": 1689734824226,
+          "views": []
         }
       },
       "execution_count": null,
@@ -1865,11 +1961,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "bb2135ef-93ca-4b0a-a769-0ff2e3b33232"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:13.851262+00:00",
-          "start_time": "2023-07-19T02:37:13.686209+00:00"
+          "end_time": "2023-07-19T02:47:11.135828+00:00",
+          "start_time": "2023-07-19T02:47:10.971704+00:00"
         }
       },
       "execution_count": null,
@@ -1886,11 +1982,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "47191506-e0e8-4078-8fdc-67f66da48b3f"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:14.017456+00:00",
-          "start_time": "2023-07-19T02:37:13.857577+00:00"
+          "end_time": "2023-07-19T02:47:14.001096+00:00",
+          "start_time": "2023-07-19T02:47:13.842421+00:00"
         }
       },
       "execution_count": null,
@@ -4048,7 +4144,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "56f0ece1-7074-45e6-82ce-49f9c1e3090c"
+      "last_transaction_id": "c7a2a7c0-f3a1-4e5d-86f7-845716cc4c71"
     }
   },
   "nbformat": 4,
