Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2003,11 +2003,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "3ddd2680-bbc2-48e9-b873-e7cfe82c61f9"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:41:28.616941+00:00",
-          "start_time": "2023-07-19T02:41:28.457687+00:00"
+          "end_time": "2023-07-19T02:47:19.292965+00:00",
+          "start_time": "2023-07-19T02:47:19.133835+00:00"
         }
       },
       "execution_count": null,
@@ -2024,11 +2024,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "6f59018c-5181-4c0d-b1b5-c6a9ac0abe57"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:41:32.209782+00:00",
-          "start_time": "2023-07-19T02:41:31.862316+00:00"
+          "end_time": "2023-07-19T02:47:22.792328+00:00",
+          "start_time": "2023-07-19T02:47:22.467662+00:00"
         },
         "datalink": {
           "b2ef382d-0457-4d28-a610-e94443bf5384": {
@@ -2582,12 +2582,58 @@
             "sampling_time": "2023-07-19T02:41:32.023828",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "7c2eef81-35d1-4979-b5c5-3a7b699b6355": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 79080,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 79080,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "7c2eef81-35d1-4979-b5c5-3a7b699b6355",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:47:22.607945",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
           "fieldMetadata": {},
-          "simpleTable": true,
-          "updated": 1689734481898,
+          "simpleTable": false,
+          "updated": 1689734850161,
           "views": []
         }
       },
@@ -4144,7 +4190,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "c7a2a7c0-f3a1-4e5d-86f7-845716cc4c71"
+      "last_transaction_id": "4d5fe1a7-678d-4b67-a97c-94a77c5c9845"
     }
   },
   "nbformat": 4,
