--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2657,15 +2657,31 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": null
+          "output_collection_id": "f78e5a3d-f49b-430f-a031-e63064b2dbe7"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:39:06.161731+00:00",
-          "start_time": "2023-07-19T02:39:06.004875+00:00"
+          "end_time": "2023-07-19T02:48:36.752186+00:00",
+          "start_time": "2023-07-19T02:48:36.595138+00:00"
         }
       },
       "execution_count": null,
-      "source": "unclean_df2 = unclean_df['Company Name']\nunclean_df2 = unclean_df2.apply(lambda x:x.split(\"\\n\")[0])",
+      "source": "unclean_df['Company Name']=unclean_df['Company Name'].apply(lambda x:x.split(\"\\n\")[0])",
+      "outputs": []
+    },
+    {
+      "id": "ddd283ed-461c-401c-a9cc-89a680599c26",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "",
       "outputs": []
     },
     {
@@ -4190,7 +4206,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "4d5fe1a7-678d-4b67-a97c-94a77c5c9845"
+      "last_transaction_id": "69678427-e4fd-4c5c-9c97-12d0eb87e8e7"
     }
   },
   "nbformat": 4,
