--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2657,15 +2657,160 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "f78e5a3d-f49b-430f-a031-e63064b2dbe7"
+          "output_collection_id": "a636da2a-4b9c-45b6-a437-a6251b423129"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:48:36.752186+00:00",
-          "start_time": "2023-07-19T02:48:36.595138+00:00"
+          "end_time": "2023-07-19T02:52:57.416762+00:00",
+          "start_time": "2023-07-19T02:52:57.088892+00:00"
+        },
+        "datalink": {
+          "77c07d07-64a0-4d80-be49-fbab97bdf598": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 79080,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 79080,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "77c07d07-64a0-4d80-be49-fbab97bdf598",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:52:57.236469",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
+        },
+        "dx": {
+          "dashboard": {
+            "multiViews": []
+          },
+          "fieldMetadata": {
+            "Company Name": {
+              "columnPosition": 6,
+              "sort": "desc"
+            },
+            "Competitors": {
+              "columnPosition": 15
+            },
+            "Founded": {
+              "columnPosition": 10
+            },
+            "Headquarters": {
+              "columnPosition": 8
+            },
+            "Industry": {
+              "columnPosition": 12
+            },
+            "Job Description": {
+              "columnPosition": 4
+            },
+            "Job Title": {
+              "columnPosition": 2
+            },
+            "Location": {
+              "columnPosition": 7
+            },
+            "Rating": {
+              "columnPosition": 5
+            },
+            "Revenue": {
+              "columnPosition": 14
+            },
+            "Salary Estimate": {
+              "columnPosition": 3
+            },
+            "Sector": {
+              "columnPosition": 13
+            },
+            "Size": {
+              "columnPosition": 9
+            },
+            "Type of ownership": {
+              "columnPosition": 11
+            },
+            "index": {
+              "columnPosition": 1
+            }
+          },
+          "updated": 1689735188147,
+          "views": [
+            {
+              "annotationRules": [],
+              "chart": {},
+              "chartMode": "grid",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "Table"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "first-view",
+              "isDefault": true,
+              "type": "public",
+              "userID": ""
+            },
+            {
+              "annotationRules": [],
+              "chart": {},
+              "chartMode": "grid",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "Table"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "first-view",
+              "isDefault": true,
+              "isTransitory": true,
+              "type": "public",
+              "userID": ""
+            }
+          ]
         }
       },
       "execution_count": null,
-      "source": "unclean_df['Company Name']=unclean_df['Company Name'].apply(lambda x:x.split(\"\\n\")[0])",
+      "source": "unclean_df['Company Name']=unclean_df['Company Name'].apply(lambda x:x.split(\"\\n\")[0])\nunclean_df",
       "outputs": []
     },
     {
@@ -4206,7 +4351,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "69678427-e4fd-4c5c-9c97-12d0eb87e8e7"
+      "last_transaction_id": "652fb840-cc01-4d78-9353-aad047efcb8b"
     }
   },
   "nbformat": 4,
