--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2657,11 +2657,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "a636da2a-4b9c-45b6-a437-a6251b423129"
+          "output_collection_id": "17764399-3825-4778-bef2-0c1a8bfe33f1"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:52:57.416762+00:00",
-          "start_time": "2023-07-19T02:52:57.088892+00:00"
+          "end_time": "2023-07-19T02:53:39.501466+00:00",
+          "start_time": "2023-07-19T02:53:39.161216+00:00"
         },
         "datalink": {
           "77c07d07-64a0-4d80-be49-fbab97bdf598": {
@@ -2707,6 +2707,52 @@
             },
             "sample_history": [],
             "sampling_time": "2023-07-19T02:52:57.236469",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          },
+          "2d2ab581-112b-4ac3-ba7c-4913af8b6efa": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 79080,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 79080,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "2d2ab581-112b-4ac3-ba7c-4913af8b6efa",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:53:39.311784",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
@@ -2763,7 +2809,7 @@
               "columnPosition": 1
             }
           },
-          "updated": 1689735188147,
+          "updated": 1689735212840,
           "views": [
             {
               "annotationRules": [],
@@ -2787,7 +2833,9 @@
             },
             {
               "annotationRules": [],
-              "chart": {},
+              "chart": {
+                "tableSparklines": true
+              },
               "chartMode": "grid",
               "confoRules": [],
               "decoration": {
@@ -4351,7 +4399,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "652fb840-cc01-4d78-9353-aad047efcb8b"
+      "last_transaction_id": "f5f90785-451d-4e9a-a465-db44f44d447b"
     }
   },
   "nbformat": 4,
