--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2809,7 +2809,8 @@
               "columnPosition": 1
             }
           },
-          "updated": 1689735212840,
+          "simpleTable": false,
+          "updated": 1689735266031,
           "views": [
             {
               "annotationRules": [],
@@ -4399,7 +4400,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "f5f90785-451d-4e9a-a465-db44f44d447b"
+      "last_transaction_id": "7246cc6c-acf0-409c-b9a4-82c42730536e"
     }
   },
   "nbformat": 4,
