--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,11 +6,11 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": "a78689f2-7fad-4f8c-993d-175aaa004da5"
+          "output_collection_id": "0f986984-a473-4928-bfb0-e16338229451"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:45:06.531885+00:00",
-          "start_time": "2023-07-19T02:45:06.375692+00:00"
+          "end_time": "2023-07-19T02:55:00.737874+00:00",
+          "start_time": "2023-07-19T02:55:00.580472+00:00"
         }
       },
       "outputs": [],
@@ -27,11 +27,11 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": "e24bf12f-6f09-4e17-90a8-8eb493f8a921"
+          "output_collection_id": "2976c8ef-dade-40ec-8ac9-20d3474425bf"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:45:10.904065+00:00",
-          "start_time": "2023-07-19T02:45:10.629358+00:00"
+          "end_time": "2023-07-19T02:55:03.718239+00:00",
+          "start_time": "2023-07-19T02:55:03.443628+00:00"
         },
         "datalink": {
           "16f69847-5e7c-47d5-8fbc-e423d5206889": {
@@ -677,12 +677,58 @@
             "sampling_time": "2023-07-19T02:45:10.745119",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_f0bdd60873bc4e548a70a981a36508e4"
+          },
+          "ca9610de-5cd1-4b44-b1a7-1f8f902a2507": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 640,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 640,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "ca9610de-5cd1-4b44-b1a7-1f8f902a2507",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:55:03.558752",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_ded4187edd6d4288ba3b94dc0b5d51fe"
           }
         },
         "dx": {
           "fieldMetadata": {},
-          "simpleTable": true,
-          "updated": 1689734579680,
+          "simpleTable": false,
+          "updated": 1689735306286,
           "views": []
         },
         "scrolled": false
@@ -2764,7 +2810,7 @@
           "fieldMetadata": {
             "Company Name": {
               "columnPosition": 6,
-              "sort": "desc"
+              "sort": "asc"
             },
             "Competitors": {
               "columnPosition": 15
@@ -2810,7 +2856,7 @@
             }
           },
           "simpleTable": false,
-          "updated": 1689735266031,
+          "updated": 1689735286704,
           "views": [
             {
               "annotationRules": [],
@@ -4400,7 +4446,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "7246cc6c-acf0-409c-b9a4-82c42730536e"
+      "last_transaction_id": "35518a01-f38b-435d-9016-c2f7e404a14e"
     }
   },
   "nbformat": 4,
