--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -742,11 +742,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "e2b73e05-dfbf-43e1-be4e-df3efcca4447"
+          "output_collection_id": "922bdd07-4864-433c-960e-ff254e80e292"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:46:36.634321+00:00",
-          "start_time": "2023-07-19T02:46:36.467093+00:00"
+          "end_time": "2023-07-19T02:55:12.096688+00:00",
+          "start_time": "2023-07-19T02:55:11.931407+00:00"
         }
       },
       "execution_count": null,
@@ -763,11 +763,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "174a041f-d294-4c1d-b6c6-956da1fc5d0d"
+          "output_collection_id": "19c3319f-576a-40c0-bd71-d5a21d0470e4"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:46:42.419338+00:00",
-          "start_time": "2023-07-19T02:46:42.227833+00:00"
+          "end_time": "2023-07-19T02:55:16.833172+00:00",
+          "start_time": "2023-07-19T02:55:16.631113+00:00"
         },
         "datalink": {
           "d42ff857-38ea-4219-a869-354699010ccb": {
@@ -1385,6 +1385,50 @@
             "sampling_time": "2023-07-19T02:46:42.262005",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_79c1a4f2ac8c4b6c812c3d3203e6a3aa"
+          },
+          "41647b78-94ef-439d-a46c-a9c52098a934": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "41647b78-94ef-439d-a46c-a9c52098a934",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:55:16.675751",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_cd69348b7a7a4339894493c064392272"
           }
         },
         "dx": {
@@ -1409,11 +1453,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5d3e703f-c7a8-49b3-883e-0ee56805973b"
+          "output_collection_id": "89171a5e-b78c-43cd-9400-0e4bb99f2637"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:46:52.402932+00:00",
-          "start_time": "2023-07-19T02:46:52.240495+00:00"
+          "end_time": "2023-07-19T02:55:20.026317+00:00",
+          "start_time": "2023-07-19T02:55:19.866554+00:00"
         }
       },
       "execution_count": null,
@@ -1426,11 +1470,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "a8de3e7a-8371-4d7f-9c18-13c25d16b7de"
+          "output_collection_id": "75b04bda-8df7-49d7-a041-b2eed80bf199"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:46:57.157249+00:00",
-          "start_time": "2023-07-19T02:46:56.900567+00:00"
+          "end_time": "2023-07-19T02:55:25.817557+00:00",
+          "start_time": "2023-07-19T02:55:25.556850+00:00"
         },
         "datalink": {
           "ee42736d-9639-42ca-8138-80ed5129674c": {
@@ -1984,12 +2028,58 @@
             "sampling_time": "2023-07-19T02:46:56.997086",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_38dfc4eac1a64b729dad0ed5abccdd06"
+          },
+          "6f7bdf7e-5342-427f-b1fe-9e8ae010eab5": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 13,
+              "orig_size_bytes": 1560,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 13,
+              "truncated_size_bytes": 1560,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "6f7bdf7e-5342-427f-b1fe-9e8ae010eab5",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:55:25.656794",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_51c801eaa6d94d73a1bb0e65107d9fa4"
           }
         },
         "dx": {
           "fieldMetadata": {},
-          "simpleTable": true,
-          "updated": 1689734824226,
+          "simpleTable": false,
+          "updated": 1689735328902,
           "views": []
         }
       },
@@ -4446,7 +4536,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "35518a01-f38b-435d-9016-c2f7e404a14e"
+      "last_transaction_id": "72ddee81-d573-4828-be01-27239373ca4d"
     }
   },
   "nbformat": 4,
