Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2077,10 +2077,101 @@
           }
         },
         "dx": {
-          "fieldMetadata": {},
+          "dashboard": {
+            "multiViews": []
+          },
+          "fieldMetadata": {
+            "Company Name": {
+              "columnPosition": 6
+            },
+            "Competitors": {
+              "columnPosition": 15
+            },
+            "Founded": {
+              "columnPosition": 10
+            },
+            "Headquarters": {
+              "columnPosition": 8
+            },
+            "Industry": {
+              "columnPosition": 12
+            },
+            "Job Description": {
+              "columnPosition": 4
+            },
+            "Job Title": {
+              "columnPosition": 2
+            },
+            "Location": {
+              "columnPosition": 7
+            },
+            "Rating": {
+              "columnPosition": 5
+            },
+            "Revenue": {
+              "columnPosition": 14
+            },
+            "Salary Estimate": {
+              "columnPosition": 3
+            },
+            "Sector": {
+              "columnPosition": 13
+            },
+            "Size": {
+              "columnPosition": 9
+            },
+            "Type of ownership": {
+              "columnPosition": 11
+            },
+            "index": {
+              "columnPosition": 1
+            }
+          },
           "simpleTable": false,
-          "updated": 1689735328902,
-          "views": []
+          "updated": 1689735362120,
+          "views": [
+            {
+              "annotationRules": [],
+              "chart": {},
+              "chartMode": "grid",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "Table"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "first-view",
+              "isDefault": true,
+              "type": "public",
+              "userID": ""
+            },
+            {
+              "annotationRules": [],
+              "chart": {},
+              "chartMode": "grid",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "Table"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "first-view",
+              "isDefault": true,
+              "isTransitory": true,
+              "type": "public",
+              "userID": ""
+            }
+          ]
         }
       },
       "execution_count": null,
@@ -4536,7 +4627,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "72ddee81-d573-4828-be01-27239373ca4d"
+      "last_transaction_id": "5bd892c9-e476-4577-9233-9a8bcd5348cc"
     }
   },
   "nbformat": 4,
