--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2188,11 +2188,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "bb2135ef-93ca-4b0a-a769-0ff2e3b33232"
+          "output_collection_id": "79b2a11f-b1af-4b1a-b891-04db0f753221"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:47:11.135828+00:00",
-          "start_time": "2023-07-19T02:47:10.971704+00:00"
+          "end_time": "2023-07-19T02:56:30.420983+00:00",
+          "start_time": "2023-07-19T02:56:30.256268+00:00"
         }
       },
       "execution_count": null,
@@ -2209,11 +2209,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "47191506-e0e8-4078-8fdc-67f66da48b3f"
+          "output_collection_id": "fab030f4-9283-4ac3-8602-2bc741229d56"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:47:14.001096+00:00",
-          "start_time": "2023-07-19T02:47:13.842421+00:00"
+          "end_time": "2023-07-19T02:56:33.658472+00:00",
+          "start_time": "2023-07-19T02:56:33.500973+00:00"
         }
       },
       "execution_count": null,
@@ -2230,11 +2230,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "3ddd2680-bbc2-48e9-b873-e7cfe82c61f9"
+          "output_collection_id": "210d51fa-f966-4a45-a491-86924362ac32"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:47:19.292965+00:00",
-          "start_time": "2023-07-19T02:47:19.133835+00:00"
+          "end_time": "2023-07-19T02:56:37.403595+00:00",
+          "start_time": "2023-07-19T02:56:37.245124+00:00"
         }
       },
       "execution_count": null,
@@ -2251,11 +2251,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "6f59018c-5181-4c0d-b1b5-c6a9ac0abe57"
+          "output_collection_id": "2f6be145-3762-4be3-a580-2880e3e1a780"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:47:22.792328+00:00",
-          "start_time": "2023-07-19T02:47:22.467662+00:00"
+          "end_time": "2023-07-19T02:56:42.127362+00:00",
+          "start_time": "2023-07-19T02:56:41.806993+00:00"
         },
         "datalink": {
           "b2ef382d-0457-4d28-a610-e94443bf5384": {
@@ -2853,6 +2853,52 @@
             },
             "sample_history": [],
             "sampling_time": "2023-07-19T02:47:22.607945",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          },
+          "c8742d32-5a73-4f15-bc89-8295aa298850": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 79080,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 79080,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "c8742d32-5a73-4f15-bc89-8295aa298850",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:56:41.944958",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
@@ -4627,7 +4673,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "5bd892c9-e476-4577-9233-9a8bcd5348cc"
+      "last_transaction_id": "2ac3a713-cc27-43e0-b577-34be652a9112"
     }
   },
   "nbformat": 4,
