Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -2930,11 +2930,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "17764399-3825-4778-bef2-0c1a8bfe33f1"
+          "output_collection_id": "64cf525c-1d82-4f46-9de4-c2028db7035b"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:53:39.501466+00:00",
-          "start_time": "2023-07-19T02:53:39.161216+00:00"
+          "end_time": "2023-07-19T02:56:52.353051+00:00",
+          "start_time": "2023-07-19T02:56:52.016966+00:00"
         },
         "datalink": {
           "77c07d07-64a0-4d80-be49-fbab97bdf598": {
@@ -3026,6 +3026,52 @@
             },
             "sample_history": [],
             "sampling_time": "2023-07-19T02:53:39.311784",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          },
+          "d7f6edca-30f0-4039-9da4-ee1be8013396": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 79080,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 79080,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "d7f6edca-30f0-4039-9da4-ee1be8013396",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:56:52.165293",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
@@ -4673,7 +4719,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "2ac3a713-cc27-43e0-b577-34be652a9112"
+      "last_transaction_id": "def0f14c-deea-4ba7-88cc-ab6d9f2a2d83"
     }
   },
   "nbformat": 4,
