Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -3082,8 +3082,7 @@
           },
           "fieldMetadata": {
             "Company Name": {
-              "columnPosition": 6,
-              "sort": "asc"
+              "columnPosition": 6
             },
             "Competitors": {
               "columnPosition": 15
@@ -3129,7 +3128,7 @@
             }
           },
           "simpleTable": false,
-          "updated": 1689735286704,
+          "updated": 1689735451624,
           "views": [
             {
               "annotationRules": [],
@@ -3194,7 +3193,7 @@
         }
       },
       "execution_count": null,
-      "source": "",
+      "source": "unclean_df2 = unclean_df\nunclean_df2",
       "outputs": []
     },
     {
@@ -4719,7 +4718,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "def0f14c-deea-4ba7-88cc-ab6d9f2a2d83"
+      "last_transaction_id": "30b32ae4-2d0e-426d-a735-cc2d2859b3e8"
     }
   },
   "nbformat": 4,
