Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -3177,7 +3177,7 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df['Company Name']=unclean_df['Company Name'].apply(lambda x:x.split(\"\\n\")[0])\nunclean_df",
+      "source": "# \nunclean_df['Company Name']=unclean_df['Company Name'].apply(lambda x:x.split(\"\\n\")[0])\nunclean_df",
       "outputs": []
     },
     {
@@ -3189,7 +3189,60 @@
           "source_hidden": false
         },
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "82300ccd-bade-44ff-9dfe-d0c8a3f93250"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-19T02:58:21.961548+00:00",
+          "start_time": "2023-07-19T02:58:21.646130+00:00"
+        },
+        "datalink": {
+          "1b67cf8c-001e-44a0-9045-6344efb81a9e": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 79080,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 79080,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "1b67cf8c-001e-44a0-9045-6344efb81a9e",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T02:58:21.780413",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
         }
       },
       "execution_count": null,
@@ -4718,7 +4771,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "30b32ae4-2d0e-426d-a735-cc2d2859b3e8"
+      "last_transaction_id": "66638b63-ad76-4d32-ae22-707a5f944bc4"
     }
   },
   "nbformat": 4,
