--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -3265,11 +3265,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "81fc0c9c-356c-456c-84fa-a6da4aa30fc8"
+          "output_collection_id": "758b3f0d-e2c8-4e75-843c-c259261d28f6"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:03:13.470380+00:00",
-          "start_time": "2023-07-19T03:03:13.265416+00:00"
+          "end_time": "2023-07-19T03:04:10.835120+00:00",
+          "start_time": "2023-07-19T03:04:10.631681+00:00"
         },
         "datalink": {
           "8806e994-1e21-41c4-b843-fb15ac437a3e": {
@@ -3711,11 +3711,55 @@
             "sampling_time": "2023-07-19T03:03:13.312423",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_c11efecc160548c79c38cc57dbd0a947"
+          },
+          "f536676f-f3c3-44a6-a0d6-986f604548d9": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 30,
+              "orig_size_bytes": 480,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 30,
+              "truncated_size_bytes": 480,
+              "truncated_string_columns": []
+            },
+            "display_id": "f536676f-f3c3-44a6-a0d6-986f604548d9",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:04:10.676232",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_f33e32988db34c648859dc2db80aec68"
           }
         }
       },
       "execution_count": null,
-      "source": "unclean_df['Salary Estimate'].value_counts()",
+      "source": "unclean_df2['Salary Estimate'].value_counts()",
       "outputs": []
     },
     {
@@ -4815,7 +4859,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "c98f2dc2-91c1-4970-9e1f-2bf9948587e6"
+      "last_transaction_id": "494715ad-d155-4af3-9bed-dea591caf31b"
     }
   },
   "nbformat": 4,
