Commit from Noteable
Synced changes with remote storage (initialize kernel)

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,7 +6,7 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": "0f986984-a473-4928-bfb0-e16338229451"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:55:00.737874+00:00",
@@ -27,7 +27,7 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": "2976c8ef-dade-40ec-8ac9-20d3474425bf"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:55:03.718239+00:00",
@@ -742,7 +742,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "922bdd07-4864-433c-960e-ff254e80e292"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:55:12.096688+00:00",
@@ -763,7 +763,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "19c3319f-576a-40c0-bd71-d5a21d0470e4"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:55:16.833172+00:00",
@@ -1453,7 +1453,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "89171a5e-b78c-43cd-9400-0e4bb99f2637"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:55:20.026317+00:00",
@@ -1470,7 +1470,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "75b04bda-8df7-49d7-a041-b2eed80bf199"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:55:25.817557+00:00",
@@ -2188,7 +2188,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "79b2a11f-b1af-4b1a-b891-04db0f753221"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:56:30.420983+00:00",
@@ -2209,7 +2209,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "fab030f4-9283-4ac3-8602-2bc741229d56"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:56:33.658472+00:00",
@@ -2230,7 +2230,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "210d51fa-f966-4a45-a491-86924362ac32"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:56:37.403595+00:00",
@@ -2251,7 +2251,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "2f6be145-3762-4be3-a580-2880e3e1a780"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:56:42.127362+00:00",
@@ -2930,7 +2930,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "64cf525c-1d82-4f46-9de4-c2028db7035b"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T02:56:52.353051+00:00",
@@ -3196,11 +3196,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "758b3f0d-e2c8-4e75-843c-c259261d28f6"
+          "output_collection_id": "1b60e381-5eef-4345-91a9-064402d9b959"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:04:10.835120+00:00",
-          "start_time": "2023-07-19T03:04:10.631681+00:00"
+          "end_time": "2023-07-19T03:17:44.773061+00:00",
+          "start_time": "2023-07-19T03:17:44.568824+00:00"
         },
         "datalink": {
           "8806e994-1e21-41c4-b843-fb15ac437a3e": {
@@ -3686,6 +3686,50 @@
             "sampling_time": "2023-07-19T03:04:10.676232",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_f33e32988db34c648859dc2db80aec68"
+          },
+          "df2e2d66-6e78-40e3-a6b9-c7eba39ebbe6": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 31,
+              "orig_size_bytes": 496,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 31,
+              "truncated_size_bytes": 496,
+              "truncated_string_columns": []
+            },
+            "display_id": "df2e2d66-6e78-40e3-a6b9-c7eba39ebbe6",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:17:44.616204",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_81938057c6b14b65860f16ecf90fe441"
           }
         }
       },
@@ -3699,15 +3743,15 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "488605c7-59f1-4c31-a408-4b818e9ed205"
+          "output_collection_id": "a491b9be-d769-4e96-94de-cd5ed259626b"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:06:21.672937+00:00",
-          "start_time": "2023-07-19T03:06:19.272878+00:00"
+          "end_time": "2023-07-19T03:17:56.308592+00:00",
+          "start_time": "2023-07-19T03:17:55.767207+00:00"
         }
       },
       "execution_count": null,
-      "source": "unclean_df2['min_salary'] = 0\nunclean_df2['max_salary'] = 0\nunclean_df2['avg_salary'] = 0\nfor i in range(len(unclean_df)):\n    try:\n        unclean_df2.loc[i, 'min_salary'] = int(unclean_df2['Salary Estimate'][i].split(' ')[0].split('-')[0].replace('$', '').replace('K', ''))\n        unclean_df2.loc[i, 'max_salary'] = int(unclean_df2['Salary Estimate'][i].split(' ')[0].split('-')[1].replace('$', '').replace('K', ''))\n    except:\n        unclean_df2.loc[i, 'min_salary'] = int(unclean_df2['Salary Estimate'][i].split('(E')[0].split('-')[0].replace('$', '').replace('K', ''))\n        unclean_df2.loc[i, 'max_salary'] = int(unclean_df2['Salary Estimate'][i].split('(E')[0].split('-')[1].replace('$', '').replace('K', ''))\n    finally:\n        unclean_df2.loc[i, 'Salary Estimate'] = str(unclean_df2.loc[i, 'min_salary']) + '-' + str(unclean_df.loc[i, 'max_salary'])\n        unclean_df2.loc[i, 'avg_salary'] = np.mean([unclean_df2.loc[i, 'min_salary'], unclean_df2.loc[i, 'max_salary']])",
+      "source": "unclean_df['min_salary'] = 0\nunclean_df['max_salary'] = 0\nunclean_df['avg_salary'] = 0\nfor i in range(len(unclean_df)):\n    try:\n        unclean_df.loc[i, 'min_salary'] = int(unclean_df['Salary Estimate'][i].split(' ')[0].split('-')[0].replace('$', '').replace('K', ''))\n        unclean_df.loc[i, 'max_salary'] = int(unclean_df['Salary Estimate'][i].split(' ')[0].split('-')[1].replace('$', '').replace('K', ''))\n    except:\n        unclean_df.loc[i, 'min_salary'] = int(unclean_df['Salary Estimate'][i].split('(E')[0].split('-')[0].replace('$', '').replace('K', ''))\n        unclean_df.loc[i, 'max_salary'] = int(unclean_df['Salary Estimate'][i].split('(E')[0].split('-')[1].replace('$', '').replace('K', ''))\n    finally:\n        unclean_df.loc[i, 'Salary Estimate'] = str(unclean_df.loc[i, 'min_salary']) + '-' + str(unclean_df.loc[i, 'max_salary'])\n        unclean_df.loc[i, 'avg_salary'] = np.mean([unclean_df.loc[i, 'min_salary'], unclean_df.loc[i, 'max_salary']])",
       "outputs": []
     },
     {
@@ -4790,7 +4834,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "a9a85e08-3835-4540-83f5-ecaaab617457"
+      "last_transaction_id": "fa69c551-6906-45b1-93c2-f539030e1ac6"
     }
   },
   "nbformat": 4,
