Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -3964,16 +3964,37 @@
       "outputs": []
     },
     {
+      "id": "f61fa6e2-63c6-4167-9978-62b084060572",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "c80ae3da-5ae7-41fc-a783-5f70bd0ca061"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-19T03:20:26.652342+00:00",
+          "start_time": "2023-07-19T03:20:26.496377+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df.reset_index(drop=True, inplace=True)",
+      "outputs": []
+    },
+    {
       "id": "d54aa14c-4aa7-4195-b585-da9f93badc2b",
       "cell_type": "code",
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "ee67cdcd-0dab-48ad-bfd3-7527e5f776d1"
+          "output_collection_id": "08235953-53b0-4539-bbd2-30e95b163dba"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:18:44.002288+00:00",
-          "start_time": "2023-07-19T03:18:41.725913+00:00"
+          "end_time": "2023-07-19T03:20:31.164836+00:00",
+          "start_time": "2023-07-19T03:20:30.446788+00:00"
         }
       },
       "execution_count": null,
@@ -3990,11 +4011,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "f67c7ac6-5235-4e6a-a390-dc1d6cf9c813"
+          "output_collection_id": "6e37faf1-d62b-4151-aa6e-fc410c3e2a52"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T02:37:16.890152+00:00",
-          "start_time": "2023-07-19T02:37:16.612901+00:00"
+          "end_time": "2023-07-19T03:20:33.572900+00:00",
+          "start_time": "2023-07-19T03:20:33.322945+00:00"
         },
         "datalink": {
           "e9de32a8-8401-43ea-be26-17007d402087": {
@@ -4410,6 +4431,52 @@
             "sampling_time": "2023-07-19T02:37:16.727804",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_2a32bbcd9fff4714b6bc0d1bbb3fcef5"
+          },
+          "92f1e7de-a027-483d-bb00-10b7976bb7bc": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 17,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 720,
+              "truncated_num_cols": 17,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 720,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "92f1e7de-a027-483d-bb00-10b7976bb7bc",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:20:33.414231",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_93efde35e6bd45c78eabd50cfc618868"
           }
         }
       },
@@ -5060,7 +5127,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "dc930284-c5e1-4c4e-bc82-160fa0b013c0"
+      "last_transaction_id": "6dbcc560-fbfa-425d-988b-d5cfcabf323e"
     }
   },
   "nbformat": 4,
