--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -4011,11 +4011,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "6e37faf1-d62b-4151-aa6e-fc410c3e2a52"
+          "output_collection_id": "48dda114-5dec-4f00-ac89-c4ea4d68c2f6"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T03:20:33.572900+00:00",
-          "start_time": "2023-07-19T03:20:33.322945+00:00"
+          "end_time": "2023-07-19T03:20:43.442842+00:00",
+          "start_time": "2023-07-19T03:20:43.132711+00:00"
         },
         "datalink": {
           "e9de32a8-8401-43ea-be26-17007d402087": {
@@ -4477,11 +4477,57 @@
             "sampling_time": "2023-07-19T03:20:33.414231",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_93efde35e6bd45c78eabd50cfc618868"
+          },
+          "efd0d88d-efde-4029-b11d-2360b31543bb": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 17,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 94896,
+              "truncated_num_cols": 17,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 94896,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "efd0d88d-efde-4029-b11d-2360b31543bb",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T03:20:43.261260",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         }
       },
       "execution_count": null,
-      "source": "unclean_df.head()",
+      "source": "unclean_df",
       "outputs": []
     },
     {
@@ -5127,7 +5173,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "6dbcc560-fbfa-425d-988b-d5cfcabf323e"
+      "last_transaction_id": "fd6755bd-bf19-41b6-80b5-c74b66371c16"
     }
   },
   "nbformat": 4,
