Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -3964,6 +3964,22 @@
       "outputs": []
     },
     {
+      "id": "cc143746-e351-43fd-ae55-296f2a0d490f",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df2 ",
+      "outputs": []
+    },
+    {
       "id": "f61fa6e2-63c6-4167-9978-62b084060572",
       "cell_type": "code",
       "metadata": {
@@ -5173,7 +5189,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "fd6755bd-bf19-41b6-80b5-c74b66371c16"
+      "last_transaction_id": "9290c2fa-f5f0-4130-b993-bb4fb090a1cd"
     }
   },
   "nbformat": 4,
